--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\vDo.Buisness\packages.config" />
+  <repository path="..\vDo.Data\packages.config" />
   <repository path="..\vDo.Server\packages.config" />
   <repository path="..\vDo.Web\packages.config" />
 </repositories>
