--- a/vDo.Server/vDo.Server.csproj
+++ b/vDo.Server/vDo.Server.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\AppuserController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -1089,6 +1090,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\vDo.Buisness\vDo.Buisness.csproj">
+      <Project>{465300d3-797e-41e6-8695-ad2df6530b81}</Project>
+      <Name>vDo.Buisness</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\vDo.Entity\vDo.Entity.csproj">
+      <Project>{53ffd937-6654-42c7-971d-18c744c71e87}</Project>
+      <Name>vDo.Entity</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
