--- a/vDo.Web/packages.config
+++ b/vDo.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="AngularJS.Core" version="1.3.0" targetFramework="net45" />
   <package id="AngularJS.Intellisense" version="1.0.3" targetFramework="net45" />
   <package id="bootstrap" version="3.0.1" targetFramework="net45" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
 </packages>
