--- a/vDo.Server/bin/vDo.Server.dll.config
+++ b/vDo.Server/bin/vDo.Server.dll.config
@@ -11,7 +11,10 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-vDo.Server-20160819152438;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-vDo.Server-20160819152438.mdf" />-->
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-vDo.Server-20160819152438.mdf;Initial Catalog=aspnet-vDo.Server-20160819152438;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
+    <add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=vdoserver.database.windows.net;initial catalog=vdoDb;user id=vdoadmin;password=fireball123!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
+
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
