--- a/vDo.Buisness/vDo.Buisness.csproj
+++ b/vDo.Buisness/vDo.Buisness.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Appuser\AppuserBroker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\AuthenticationBroker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
