--- a/vDo.Data/vDo.Data.csproj
+++ b/vDo.Data/vDo.Data.csproj
@@ -74,6 +74,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Model.Views.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
